# Kaizen

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Mapping.h  README.md  compile.sh  compile_commands.json  cs.c  main.cpp
src/: CMakeLists.txt  Discord.hpp  Scheduler.cpp  Scheduler.hpp  common.hpp  main.cpp  util.hpp
src/backend/: CMakeLists.txt  Core.cpp  Core.hpp  Debugger.cpp  Debugger.hpp  GameDB.cpp  GameDB.hpp  MemoryRegions.hpp  MupenMovie.cpp  MupenMovie.hpp  Netplay.cpp  Netplay.hpp  RomHelpers.hpp  Scheduler.cpp  Scheduler.hpp
src/backend/core/: Audio.cpp  Audio.hpp  BaseCPU.hpp  CMakeLists.txt  CachedInterpreter.cpp  CachedInterpreter.hpp  CpuDefinitions.hpp  Disassembler.cpp  Disassembler.hpp  Dynarec.cpp  Dynarec.hpp  Interpreter.cpp  Interpreter.hpp  JIT.cpp  JIT.hpp  MMIO.cpp  MMIO.hpp  Mem.cpp  Mem.hpp  RCP.hpp  RDP.cpp  RDP.hpp  RSP.cpp  RSP.hpp  RSQ.hpp
src/backend/core/JIT/: CMakeLists.txt  IR.cpp  IR.hpp  decode.cpp  instructions.cpp
src/backend/core/JIT/IR/: Opcode.hpp  Register.hpp  Value.hpp
src/backend/core/cachedinterpreter/: CMakeLists.txt  decode.cpp  instructions.cpp  instructions.hpp
src/backend/core/cachedinterpreter/cop/: cop0decode.cpp  cop0decode.hpp  cop0instructions.cpp  cop0instructions.hpp  cop1decode.cpp  cop1decode.hpp  cop1instructions.cpp  cop1instructions.hpp
src/backend/core/dynarec/: CMakeLists.txt  MemoryManagement.cpp  decode.cpp  instructions.cpp  instructions.hpp
src/backend/core/dynarec/cop/: cop0decode.cpp  cop0decode.hpp  cop0instructions.cpp  cop0instructions.hpp  cop1decode.cpp  cop1decode.hpp  cop1instructions.cpp  cop1instructions.hpp
src/backend/core/interpreter/: CMakeLists.txt  cop0instructions.cpp  cop1instructions.cpp  decode.cpp  instructions.cpp
src/backend/core/interpreter/cop/: cop0instructions.cpp  cop1instructions.cpp
src/backend/core/jit/: MemoryManagement.cpp  decode.cpp  helpers.hpp  instructions.cpp  instructions.hpp
src/backend/core/jit/cop/: cop0decode.cpp  cop0decode.hpp  cop0instructions.cpp  cop0instructions.hpp  cop1decode.cpp  cop1decode.hpp  cop1instructions.cpp  cop1instructions.hpp
src/backend/core/mem/: CMakeLists.txt  Flash.cpp
src/backend/core/mmio/: AI.cpp  AI.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  Interrupt.cpp  Interrupt.hpp  MI.cpp  MI.hpp  PI.cpp  PI.hpp  PIF.cpp  PIF.hpp  RI.cpp  RI.hpp  SI.cpp  SI.hpp  VI.cpp  VI.hpp
src/backend/core/mmio/PIF/: Device.cpp  Device.hpp  MupenMovie.cpp  MupenMovie.hpp
src/backend/core/registers/: CMakeLists.txt  Cop0.cpp  Cop0.hpp  Cop1.cpp  Cop1.hpp  Registers.cpp  Registers.hpp
src/backend/core/registers/cop/: cop0instructions.cpp  cop1instructions.cpp
src/backend/core/rsp/: CMakeLists.txt  decode.cpp  instructions.cpp
src/backend/netplay/: CMakeLists.txt  LAN.cpp
src/core/: Audio.cpp  Audio.hpp  BaseCore.cpp  BaseCore.hpp  CMakeLists.txt  Scheduler.cpp  Scheduler.hpp  common.hpp  util.hpp
src/core/gb/: CMakeLists.txt  Core.cpp  Core.hpp  Cpu.cpp  Cpu.hpp  Mem.cpp  Mem.hpp  mbc.cpp  mbc.hpp  memory_regions.hpp
src/core/n64/: CMakeLists.txt  Core.cpp  Core.hpp  Cpu.cpp  Cpu.hpp  Mem.cpp  Mem.hpp  memory_regions.hpp
src/core/n64/core/: Audio.hpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  MMIO.cpp  MMIO.hpp  Mem.cpp  Mem.hpp  RDP.cpp  RDP.hpp  RSP.cpp  RSP.hpp
src/cores/: BaseCore.hpp  CMakeLists.txt  common.hpp  util.hpp
src/cores/n64/: CMakeLists.txt  Core.cpp  Core.hpp  ParallelRDPWrapper.hpp
src/cores/n64/core/: Audio.cpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  MMIO.cpp  MMIO.hpp  Mem.cpp  Mem.hpp  RDP.cpp  RSP.hpp
src/frontend/: App.cpp  App.hpp  AudioSettings.cpp  AudioSettings.hpp  CMakeLists.txt  CPUSettings.cpp  CPUSettings.hpp  CodeModel.hpp  Debugger.cpp  Debugger.hpp  EmuThread.cpp  EmuThread.hpp  ImGuiWidget.cpp  ImGuiWidget.hpp  InputSettings.cpp  InputSettings.hpp  JSONUtils.hpp  KaizenQt.cpp  KaizenQt.hpp  Language.cpp  Language.hpp  MainWindow.cpp  MainWindow.hpp  NetplayWindow.cpp  NetplayWindow.hpp  ParallelRDPWrapper.cpp  ParallelRDPWrapper.hpp  RenderWidget.cpp  RenderWidget.hpp  Settings.cpp  Settings.hpp  SettingsWindow.cpp  SettingsWindow.hpp  main.cpp  mainwindow.ui
src/frontend/Debugger/: Debugger.cpp  Debugger.hpp  MemoryEditor.cpp  MemoryEditor.hpp
src/frontend/debugger/: Debugger.cpp  Debugger.hpp  MemoryEditor.hpp  RSPDebugger.cpp  RSPDebugger.hpp
src/frontend/imgui/: CMakeLists.txt  GameList.cpp  GameList.hpp  Settings.cpp  Settings.hpp  Widgets.hpp  Window.cpp  Window.hpp  debugger.cpp  debugger.hpp  utilities.hpp  widgets.cpp
src/frontend/imgui/debugger/: debugger_common.hpp
src/frontend/include/: gui.hpp
src/frontend/include/gui/: logger.hpp  opengl_context.hpp
src/frontend/qt/: CMakeLists.txt  Frontend.cpp  Frontend.hpp  main.cpp
src/frontend/sdl/: CMakeLists.txt  Frontend.cpp  Frontend.hpp  ParallelRDPWrapper.cpp  ParallelRDPWrapper.hpp  main.cpp
src/frontend/src/: gui.cpp
src/frontend/src/gui/: logger.cpp  opengl_context.cpp
src/n64/: CMakeLists.txt  Core.cpp  Core.hpp  Scheduler.cpp  Scheduler.hpp  m64.cpp  m64.hpp  memory_regions.hpp
src/n64/core/: Audio.cpp  Audio.hpp  BaseCpu.hpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  Dynarec.cpp  Dynarec.hpp  Interpreter.cpp  Interpreter.hpp  MMIO.cpp  MMIO.hpp  Mem.cpp  Mem.hpp  RDP.cpp  RDP.hpp  RSP.cpp  RSP.hpp  rcp_rsq.hpp
src/n64/core/cpu/: CMakeLists.txt  Registers.cpp  Registers.hpp  decode.cpp  instructions.cpp
src/n64/core/interpreter/: decode.cpp  instructions.cpp
src/n64/core/mmio/: AI.cpp  AI.hpp  Interrupt.cpp  MI.cpp  MI.hpp  PI.cpp  PI.hpp  PIF.cpp  PIF.hpp  RI.cpp  RI.hpp  SI.cpp  SI.hpp  VI.cpp  VI.hpp
src/n64/core/registers/: Cop0.cpp  Cop1.cpp  Cop1.hpp  Registers.cpp  Registers.hpp
src/n64/core/rsp/: decode.cpp  instructions.cpp
src/natsukashii/include/: common.h  core.h  utils.h
src/natsukashii/include/core/: cpu.h  mem.h
src/softRDP/: CMakeLists.txt  softrdp.cpp  softrdp.hpp
src/utils/: File.hpp  Float.hpp  FloatingPoint.hpp  MemoryHelpers.hpp  Random.hpp  arena.cpp  arena.hpp  byteswap.hpp  log.hpp
(+133 files in other folders)
